# oikos-scrapper

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dbt_project.yml  pyproject.toml
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_medallion_pipeline.py  0003_neighborhood_signals.py  0004_neighborhood_files.py  0005_recursive_raw_depth.py  0006_listing_asset_enrichment.py  0007_listing_dates_and_neighborhood_assets.py  0008_price_enrichment.py  0009_llm_enrichment.py  0010_geocode_enrichment.py  0011_llm_lat_long.py  0012_sources_block_flag.py  0013_downloaded_assets_registry.py  0014_int_listings_deduped.py  0015_drop_asset_tables.py  0016_recreate_int_listings_deduped.py
bots/neighborhood-signal/: README.md  sources.yaml
bots/realestate-listings/: README.md  sources.yaml
config/: sources.yaml
dbt/: .user.yml  profiles.yml
deploy/argo-workflows/: cron-workflow.yaml  kustomization.yaml  rbac.yaml  workflow-template.yaml
docs/: neighborhood-data-sources.md
models/: sources.yml
models/marts/: api_listing_details.sql  api_listing_media.sql  api_listing_search.sql  mart_listing_details.sql  mart_listing_media.sql  mart_listing_search.sql  mart_listings.sql  mart_neighborhood_files.sql  (+1 more)
scripts/: bootstrap_local.sh
src/oikos_scraper/: cli.py  (+11 more)
tests/: test_config.py  test_embedded_strategy.py  test_geocoding.py  test_location_enrichment.py  test_neighborhood_runner.py  test_normalizer.py  test_object_store.py  test_repository.py  test_repository_payload.py  test_runner.py  test_static_strategy.py
(+26 files in other folders)
